[package]
name = "healthzd"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "webpki-roots"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
tokio = { version = "1.49.0", features = ["macros", "net", "process", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["fs"] }
